Add comprehensive endpoint testing and status report - 15/23 endpoints working (65.2%)

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "node dist/index.js",
     "dev": "ts-node src/index.ts",
     "watch": "tsc --watch",
-    "test": "node test-connection.js"
+    "test": "node test-connection.js",
+    "test:all": "node test-all-endpoints.js"
   },
   "keywords": [
     "mcp",
