Fix ESM imports, add http-mcp server script, update README and build

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,7 @@ SIMPLICATE_API_SECRET=REPLACE_ME
 
 # Simplicate API Base URL
 SIMPLICATE_API_BASE_URL=https://act.simplicate.com/api/v2
+
+# If you want to proxy local MCP stdio to a remote MCP HTTP endpoint, set this
+# Example: REMOTE_MCP_URL=https://simplicate.onrender.com/mcp
+REMOTE_MCP_URL=
