--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "build": "tsc",
   "start": "node dist/index.js",
   "start:render": "node dist/health-server.js",
+  "start:proxy": "node src/stdio-proxy.js",
+  "start:http-mcp": "node dist/http-mcp-server.js",
     "dev": "ts-node src/index.ts",
     "watch": "tsc --watch",
     "test": "node test-connection.js",
