--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   ],
   "scripts": {
   "build": "tsc",
-  "start": "node dist/index.js",
+  "start": "node dist/http-mcp-server.js",
   "start:render": "node dist/health-server.js",
   "start:proxy": "node src/stdio-proxy.js",
   "start:http-mcp": "node dist/http-mcp-server.js",
